# telegram-list-bot

./: .gitignore  Pipfile  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  variables.py
telegram_list_bot/: __init__.py  config.ini.example  main.py
