[tool.poetry]
name = "telegram-list-bot"
version = "1.1.0"
description = "Small telegram bot storing lists"
authors = ["Yoann Piétri <me@nanoy.fr>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "telegram_list_bot"}]
include = ["config.example.ini"]

[tool.poetry.dependencies]
python = ">=3.7.2, <4.0"
python-telegram-bot = "^13.15"
daemons = "^1.3.2"
docopt = "^0.6.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
pylint = "^2.15.9"
rope = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
